add histroric function of env and learning class

--- a/rendu_final/main.ipynb
+++ b/rendu_final/main.ipynb
@@ -54,6 +54,19 @@
    "source": [
     "### 4 goals"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from environments import Frozen4goals\n"
+   ]
   }
  ],
  "metadata": {
