add_utils.py /batman

--- a/rendu_final/main.ipynb
+++ b/rendu_final/main.ipynb
@@ -29,8 +29,8 @@
     "import os\n",
     "import colorsys\n",
     "\n",
-    "from environments import MAPS, FrozenLakeOneGoal, createMap\n",
-    "from algorithms import SingleGoalCentralQLearning, RandomPolicy"
+    "from environments import MAPS, FrozenLakeOneGoal, createMap,FrozenLake4goals\n",
+    "from algorithms import SingleGoalCentralQLearning, RandomPolicy,IndependentQLearning,AlternatingIQL"
    ]
   },
   {
@@ -158,15 +158,6 @@
    "metadata": {},
    "source": [
     "### 4 goals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from environments import FrozenLake4goals\n"
    ]
   },
   {
