--- a/rendu_final/main.ipynb
+++ b/rendu_final/main.ipynb
@@ -29,8 +29,9 @@
     "import os\n",
     "import colorsys\n",
     "\n",
+    "from utils import run_simulation, visualizePolicyCommonGoal\n",
     "from environments import MAPS, FrozenLakeOneGoal, createMap,FrozenLake4goals\n",
-    "from algorithms import SingleGoalCentralQLearning, RandomPolicy,IndependentQLearning,AlternatingIQL"
+    "from algorithms import SingleGoalCentralQLearning, RandomPolicy, IndependentQLearning, AlternatingIQL"
    ]
   },
   {
@@ -52,8 +53,7 @@
    "metadata": {},
    "source": [
     "## Multi agents\n",
-    "### Common goal\n",
-    "- **Running a learning algorithm**"
+    "### Common goal"
    ]
   },
   {
@@ -62,96 +62,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_simulation(agent, map_, num_agent, num_episodes=10000, silent=True):\n",
-    "    # Create environment\n",
-    "    env = FrozenLakeOneGoal(map_=map_, max_steps=100, num_agents=num_agent)\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(\"Training the agents...\")\n",
     "    \n",
-    "    # Tracking metrics\n",
-    "    episode_rewards = []\n",
-    "    success_rate = []\n",
-    "    success_window = []\n",
+    "    num_agent = 2\n",
     "    \n",
-    "    for episode in range(num_episodes):\n",
-    "        state, _ = env.reset()\n",
-    "        total_reward = 0\n",
-    "        done = False\n",
-    "        truncated = False\n",
-    "        step = 0\n",
+    "    n_ep            = int(10e4)\n",
+    "    learning_rate   = 0.1\n",
+    "    discount_factor = 0.9\n",
+    "    explo_rate      = 5.0\n",
+    "    explo_decay     = 0.999\n",
+    "    min_explo_rate  = 0.05\n",
+    "    map_name        = '4x4'\n",
+    "    \n",
+    "    if map_name == None:\n",
+    "        map_size = 4\n",
+    "    else:\n",
+    "        map_size = map_name[0]\n",
     "        \n",
-    "        # Run episode\n",
-    "        while not done and not truncated:\n",
-    "            # Select action\n",
-    "            action = agent.select_action(state)\n",
-    "            # Take action\n",
-    "            next_state, reward, done, truncated, _ = env.step(action)\n",
-    "            # Update Q-table\n",
-    "            agent.update(state, action, reward, next_state, done)\n",
-    "            # Update state and total reward\n",
-    "            state = next_state\n",
-    "            total_reward += reward\n",
-    "            step += 1\n",
-    "        \n",
-    "        # Record episode success/failure\n",
-    "        success = total_reward > 0.5\n",
-    "        success_window.append(success)\n",
-    "        if len(success_window) > 200:\n",
-    "            success_window.pop(0)\n",
-    "        \n",
-    "        # Calculate success rate over last 100 episodes\n",
-    "        current_success_rate = sum(success_window) / len(success_window)\n",
-    "        success_rate.append(current_success_rate)\n",
-    "        \n",
-    "        # Record total reward\n",
-    "        # mean_reward = total_reward / step if step > 0 else 0\n",
-    "        mean_reward = total_reward\n",
-    "        episode_rewards.append(mean_reward)\n",
-    "        \n",
-    "        # Print progress\n",
-    "        if not silent and episode % 100 == 0:\n",
-    "            print(f\"Episode: {episode}, Total Reward: {mean_reward}, Success Rate: {current_success_rate:.2f}, Epsilon: {agent.epsilon:.4f}\")\n",
+    "    seed            = 0\n",
     "    \n",
-    "    window_size = 500\n",
-    "    mean_rewards_smooth = np.convolve(episode_rewards, np.ones(window_size)/window_size, mode='valid')\n",
+    "    map_    = createMap(num_agent, map_size, seed=seed, map_name=None)\n",
+    "    env     = FrozenLakeOneGoal(map_=map_, max_steps=100, num_agents=num_agent)\n",
     "    \n",
-    "    # Plot learning curve\n",
-    "    plt.figure(figsize=(12, 5))\n",
+    "    trained_agent   = run_simulation(map_, num_agent, learning_rate, discount_factor, explo_rate, explo_decay, min_explo_rate, num_episodes=n_ep)\n",
+    "    print(\"Training complete!\")\n",
     "    \n",
-    "    plt.subplot(1, 2, 1)\n",
-    "    plt.plot(mean_rewards_smooth)\n",
-    "    plt.axhline(y=1, color='black', linestyle='--', linewidth=2)\n",
-    "    plt.title('Episode Rewards')\n",
-    "    plt.xlabel('Episode')\n",
-    "    plt.ylabel('Total Reward')\n",
-    "    \n",
-    "    plt.subplot(1, 2, 2)\n",
-    "    plt.plot(success_rate)\n",
-    "    plt.title('Success Rate (500-episode moving average)')\n",
-    "    plt.xlabel('Episode')\n",
-    "    plt.ylabel('Success Rate')\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "    \n",
-    "    return agent"
+    "    # Visualize the learned policy\n",
+    "    print(\"Visualizing the learned policy...\")\n",
+    "    visualizePolicyCommonGoal(env, map_, trained_agent, num_episodes=4, num_agents=num_agent)\n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **Visualizing the learned policy**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -243,8 +184,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "marlbase",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
