added common goal cql

--- a/rendu_final/main.ipynb
+++ b/rendu_final/main.ipynb
@@ -53,8 +53,7 @@
    "metadata": {},
    "source": [
     "## Multi agents\n",
-    "### Common goal\n",
-    "- **Running a learning algorithm**"
+    "### Common goal"
    ]
   },
   {
@@ -62,21 +61,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "- **Visualizing the learned policy**"
+    "if __name__ == \"__main__\":\n",
+    "    print(\"Training the agents...\")\n",
+    "    \n",
+    "    num_agent = 2\n",
+    "    n_ep            = int(10e4)\n",
+    "    learning_rate   = 0.1\n",
+    "    discount_factor = 0.9\n",
+    "    explo_rate      = 5.0\n",
+    "    explo_decay     = 0.999\n",
+    "    min_explo_rate  = 0.05\n",
+    "    map_name        = '4x4'\n",
+    "    \n",
+    "    if map_name == None:\n",
+    "        map_size    = 4\n",
+    "    else:\n",
+    "        map_size    = map_name[0]\n",
+    "        \n",
+    "    seed            = 0\n",
+    "    \n",
+    "    map_    = createMap(num_agent, map_size, seed=seed, map_name=None)\n",
+    "    env     = FrozenLakeOneGoal(map_=map_, max_steps=100, num_agents=num_agent) \n",
+    "    \n",
+    "    trained_agent   = utils.run_simulation(map_, num_agent, learning_rate, discount_factor, explo_rate, explo_decay, min_explo_rate, num_episodes=n_ep)\n",
+    "    print(\"Training complete!\")\n",
+    "    \n",
+    "    # Visualize the learned policy\n",
+    "    print(\"Visualizing the learned policy...\")\n",
+    "    utils.visualizePolicyCommonGoal(env, map_, trained_agent, num_episodes=4, num_agents=num_agent)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
