added my code -spriderman

--- a/rendu_final/main.ipynb
+++ b/rendu_final/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
     "import os\n",
     "import colorsys\n",
     "\n",
-    "from environments import MAPS, FrozenLakeOneGoal, createMap,FrozenLake4goals\n",
-    "from algorithms import SingleGoalCentralQLearning, RandomPolicy,IndependentQLearning,AlternatingIQL\n",
+    "from environments import MAPS, FrozenLakeCommonGoal, createMap,FrozenLake4goals\n",
+    "from algorithms import CentralQLearningCommonGoal, RandomPolicy,IndependentQLearning, AlternatingIQL\n",
     "import utils"
    ]
   },
@@ -65,26 +65,35 @@
     "if __name__ == \"__main__\":\n",
     "    print(\"Training the agents...\")\n",
     "    \n",
-    "    num_agent = 2\n",
-    "    n_ep            = int(10e4)\n",
-    "    learning_rate   = 0.1\n",
-    "    discount_factor = 0.9\n",
-    "    explo_rate      = 5.0\n",
-    "    explo_decay     = 0.999\n",
-    "    min_explo_rate  = 0.05\n",
-    "    map_name        = '4x4'\n",
+    "    num_agent       = 2\n",
     "    \n",
+    "    map_name        = None\n",
     "    if map_name == None:\n",
     "        map_size    = 4\n",
     "    else:\n",
     "        map_size    = map_name[0]\n",
-    "        \n",
+    "    \n",
+    "    state_size      = map_size ** num_agent \n",
+    "    action_size     = 4   \n",
     "    seed            = 0\n",
     "    \n",
-    "    map_    = createMap(num_agent, map_size, seed=seed, map_name=None)\n",
-    "    env     = FrozenLakeOneGoal(map_=map_, max_steps=100, num_agents=num_agent) \n",
+    "    map_    = createMap(num_agent, map_size, map_name, seed)\n",
+    "    env     = FrozenLakeCommonGoal(map_=map_, max_steps=100, num_agents=num_agent) \n",
     "    \n",
-    "    trained_agent   = utils.run_simulation(map_, num_agent, learning_rate, discount_factor, explo_rate, explo_decay, min_explo_rate, num_episodes=n_ep)\n",
+    "    centralQ_param = {\n",
+    "        \"state_size\"            : state_size,\n",
+    "        \"action_size\"           : action_size,\n",
+    "        \"num_agents\"            : num_agent,\n",
+    "        \"learning_rate\"         : 0.1,\n",
+    "        \"discount_factor\"       : 0.9,\n",
+    "        \"exploration_rate\"      : 5.0,\n",
+    "        \"exploration_decay\"     : 0.999,\n",
+    "        \"min_exploration_rate\"  : 0.05\n",
+    "    }\n",
+    "    \n",
+    "    agent   = CentralQLearningCommonGoal(**centralQ_param)\n",
+    "    \n",
+    "    trained_agent   = utils.runSimulationCommonGoal(agent, map_, num_agent)\n",
     "    print(\"Training complete!\")\n",
     "    \n",
     "    # Visualize the learned policy\n",
@@ -1574,9 +1583,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (MARL_env)",
+   "display_name": "Python (marl_venv)",
    "language": "python",
-   "name": "marl_env"
+   "name": "marl_venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1588,7 +1597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
