--- a/rendu_final/main.ipynb
+++ b/rendu_final/main.ipynb
@@ -145,11 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'agent_reward': 1.0, 'steps': 6}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#add visu"
+    "utils.evaluate_policy(env,agent,verbose=False)"
    ]
   },
   {
